# bepguard-artifact-8008

./: .bootstrap
artifact/: README.md  baseline_acquisition_status.csv  baseline_matrix.csv  baseline_package_lock.csv  baseline_protocol.md  baseline_wrapper_protocol.csv  baseline_wrapper_protocol.md  checksum_manifest.csv  claim_lock.json  coding_protocol.md  coding_validation_report.md  corpus_lock.csv  environment_lock.json  external_baseline_package_lock.json  external_package_manifest.csv  external_resource_gate.md  external_resources.csv  model_core.md  paper_metadata.json  protocol_amendments.csv  protocol_corpus_lock.json  protocol_lock.json  pyproject.toml  quickstart.md  reference_ledger.csv  repository_upload_manifest.json  reproduction.md  reproduction_ladder.json  requirements.txt  rule_source_ledger.csv  source_manifest.csv  source_snapshot_manifest.csv  source_span_ledger.csv  study_independence_lock.md  study_protocol.md  triage_index.json
artifact/bepguard/: __init__.py  admission_scope.py  artifact_manifest.py  assessor_objection_closure.py  blind_replay.py  causal_counterfactual.py  claim_impact.py  claim_rule_coverage.py  claim_trace.py  cli.py  contribution_trace.py  corpus_stability.py  counterfactual_roundtrip.py  decision_purity.py  declarative_oracle.py  deliverable_trio.py  delivery_capsule.py  delivery_packet.py  deterministic_reexecution.py  deterministic_replay.py  documentation_consistency.py  evidence.py  evidence_cards.py  evidence_digest.py  evidence_multiplicity.py  evidence_redundancy.py  external.py  external_contrast.py  ir.py  (+62 more)
(+471 files in other folders)
